redis/mem.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: benchmark
spec:
  replicas: 1
  selector:
    matchLabels:
      name: benchmark
  template:
    metadata:
      labels:
        name: benchmark
    spec:
      containers:
      - name: benchmark
        image: redislabs/memtier_benchmark:b1b1d10
        args: ["-d", "10", "-n", "20000000", "--pipeline=50", "-a", "$(REDIS_PASSWORD)", "-s", "$(REDIS_SERVER)", "-p", "$(REDIS_PORT)"]
        resources:
          requests:
            cpu: "1"
            memory: "128Mi"
