redis/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: redis
spec:
  rules:
  - host: redis.k8t.io
    http:
      paths:
      - backend:
          serviceName: redis-enterprise-cluster-ui
          servicePort: 8443
        path: /
